{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 105,
  "lineage": "9587bb82-b97a-980a-1e8e-68e39a81c834",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b6dcc79f611c6e36",
            "domain": "vpc",
            "id": "eipalloc-013bf6669a9f3943b",
            "instance": "i-0c2c7193f8859c198",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0614230650919cba6",
            "private_dns": "ip-10-0-1-167.ec2.internal",
            "private_ip": "10.0.1.167",
            "public_dns": "ec2-34-237-237-203.compute-1.amazonaws.com",
            "public_ip": "34.237.237.203",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "HR"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.ec2_bastion_public.aws_instance.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_bastion_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:433554690891:instance/i-0c2c7193f8859c198",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c2c7193f8859c198",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sachindev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0614230650919cba6",
            "private_dns": "ip-10-0-1-167.ec2.internal",
            "private_ip": "10.0.1.167",
            "public_dns": "ec2-34-237-237-203.compute-1.amazonaws.com",
            "public_ip": "34.237.237.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05ea317500995ba61",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e8d30fdd723c3cd5",
            "tags": {
              "Name": "dev-BastionHost",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "dev-BastionHost",
              "environment": "dev",
              "owners": "HR"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "dev-BastionHost"
            },
            "vpc_security_group_ids": [
              "sg-069c5639b3914b1fc"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:433554690891:instance/i-0e49d68643f22a371",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e49d68643f22a371",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sachindev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0631baba9cef24ff0",
            "private_dns": "ip-10-0-101-131.ec2.internal",
            "private_ip": "10.0.101.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-072b92fcd8174874d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9e8dd6b5ace5920",
            "tags": {
              "Name": "dev-vm-1",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "dev-vm-1",
              "environment": "dev",
              "owners": "HR"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "dev-vm-1"
            },
            "vpc_security_group_ids": [
              "sg-0f6fd292f5f48e037"
            ]
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_ami.amzlinux2",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:433554690891:instance/i-0341baa5e2481df27",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0341baa5e2481df27",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sachindev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03a47dbe1b02e72de",
            "private_dns": "ip-10-0-102-55.ec2.internal",
            "private_ip": "10.0.102.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0745300eae811d18c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09fe70ea603602226",
            "tags": {
              "Name": "dev-vm-2",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "dev-vm-2",
              "environment": "dev",
              "owners": "HR"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "dev-vm-2"
            },
            "vpc_security_group_ids": [
              "sg-0f6fd292f5f48e037"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb.module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:433554690891:loadbalancer/HR-dev-myelb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "HR-dev-myelb-373110388.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "HR-dev-myelb",
            "idle_timeout": 60,
            "instances": [
              "i-0341baa5e2481df27",
              "i-0e49d68643f22a371"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              },
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 81,
                "lb_protocol": "http"
              }
            ],
            "name": "HR-dev-myelb",
            "security_groups": [
              "sg-01703e2b4304f70a2"
            ],
            "source_security_group": "433554690891/loadbalancer-sg-20210526084221603900000001",
            "source_security_group_id": "sg-01703e2b4304f70a2",
            "subnets": [
              "subnet-0233001a824826510",
              "subnet-0e8d30fdd723c3cd5"
            ],
            "tags": {
              "Name": "HR-dev-myelb",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-dev-myelb",
              "environment": "dev",
              "owners": "HR"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433554690891:security-group/sg-01703e2b4304f70a2",
            "description": "Security group with HTTP port open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01703e2b4304f70a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "loadbalancer-sg-20210526084221603900000001",
            "name_prefix": "loadbalancer-sg-",
            "owner_id": "433554690891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "loadbalancer-sg",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "loadbalancer-sg",
              "environment": "dev",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e5cafd5d476768c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1169938336",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01703e2b4304f70a2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-932178838",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01703e2b4304f70a2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433554690891:security-group/sg-0f6fd292f5f48e037",
            "description": "Security group with HTTP \u0026 SSH ports open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6fd292f5f48e037",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-sg-20210526073404669200000001",
            "name_prefix": "private-sg-",
            "owner_id": "433554690891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "private-sg",
              "environment": "dev",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e5cafd5d476768c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-888638789",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f6fd292f5f48e037",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3089864109",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f6fd292f5f48e037",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-876827795",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f6fd292f5f48e037",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433554690891:security-group/sg-069c5639b3914b1fc",
            "description": "Security Group with SSH port open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069c5639b3914b1fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public-bastion-sg-20210526073404974600000002",
            "name_prefix": "public-bastion-sg-",
            "owner_id": "433554690891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-bastion-sg",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "public-bastion-sg",
              "environment": "dev",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e5cafd5d476768c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2010769052",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-069c5639b3914b1fc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3382029603",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-069c5639b3914b1fc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0bea989d1ca7af8d5",
            "domain": "vpc",
            "id": "eipalloc-0e578395cd9cb59f2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0523d0476402872ca",
            "private_dns": "ip-10-0-1-85.ec2.internal",
            "private_ip": "10.0.1.85",
            "public_dns": "ec2-54-236-70-121.compute-1.amazonaws.com",
            "public_ip": "54.236.70.121",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "HR-dev-myvpc-us-east-1a",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-dev-myvpc-us-east-1a",
              "environment": "dev",
              "owners": "HR"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433554690891:internet-gateway/igw-09c27b073a5d6b673",
            "id": "igw-09c27b073a5d6b673",
            "owner_id": "433554690891",
            "tags": {
              "Name": "HR-dev-myvpc",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-dev-myvpc",
              "environment": "dev",
              "owners": "HR"
            },
            "vpc_id": "vpc-09e5cafd5d476768c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e578395cd9cb59f2",
            "id": "nat-04344374fc6fbb323",
            "network_interface_id": "eni-0523d0476402872ca",
            "private_ip": "10.0.1.85",
            "public_ip": "54.236.70.121",
            "subnet_id": "subnet-0e8d30fdd723c3cd5",
            "tags": {
              "Name": "HR-dev-myvpc-us-east-1a",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-dev-myvpc-us-east-1a",
              "environment": "dev",
              "owners": "HR"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02ca9fcf4675b39d71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04344374fc6fbb323",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02ca9fcf4675b39d7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09c27b073a5d6b673",
            "id": "r-rtb-04f348f88e9cae7801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04f348f88e9cae780",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433554690891:route-table/rtb-008182138900c5346",
            "id": "rtb-008182138900c5346",
            "owner_id": "433554690891",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR-dev-myvpc-db",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-dev-myvpc-db",
              "environment": "dev",
              "owners": "HR"
            },
            "vpc_id": "vpc-09e5cafd5d476768c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433554690891:route-table/rtb-02ca9fcf4675b39d7",
            "id": "rtb-02ca9fcf4675b39d7",
            "owner_id": "433554690891",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04344374fc6fbb323",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "HR-dev-myvpc-private",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-dev-myvpc-private",
              "environment": "dev",
              "owners": "HR"
            },
            "vpc_id": "vpc-09e5cafd5d476768c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433554690891:route-table/rtb-04f348f88e9cae780",
            "id": "rtb-04f348f88e9cae780",
            "owner_id": "433554690891",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09c27b073a5d6b673",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "HR-dev-myvpc-public",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-dev-myvpc-public",
              "environment": "dev",
              "owners": "HR"
            },
            "vpc_id": "vpc-09e5cafd5d476768c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e09689d3052b1359",
            "route_table_id": "rtb-008182138900c5346",
            "subnet_id": "subnet-03a28605fb75f888a"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5811ea7e7e85d5b",
            "route_table_id": "rtb-008182138900c5346",
            "subnet_id": "subnet-0a71009ca900bfe86"
          },
          "dependencies": [
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f42b91afc3949347",
            "route_table_id": "rtb-02ca9fcf4675b39d7",
            "subnet_id": "subnet-0c9e8dd6b5ace5920"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b812aaff9acbcad",
            "route_table_id": "rtb-02ca9fcf4675b39d7",
            "subnet_id": "subnet-09fe70ea603602226"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088a4e8bd5e4923b7",
            "route_table_id": "rtb-04f348f88e9cae780",
            "subnet_id": "subnet-0e8d30fdd723c3cd5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052ebb998b7925301",
            "route_table_id": "rtb-04f348f88e9cae780",
            "subnet_id": "subnet-0233001a824826510"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433554690891:subnet/subnet-03a28605fb75f888a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.151.0/24",
            "id": "subnet-03a28605fb75f888a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "433554690891",
            "tags": {
              "Name": "HR-dev-myvpc-db-us-east-1a",
              "Type": "database-subnets",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-dev-myvpc-db-us-east-1a",
              "Type": "database-subnets",
              "environment": "dev",
              "owners": "HR"
            },
            "vpc_id": "vpc-09e5cafd5d476768c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433554690891:subnet/subnet-0a71009ca900bfe86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.152.0/24",
            "id": "subnet-0a71009ca900bfe86",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "433554690891",
            "tags": {
              "Name": "HR-dev-myvpc-db-us-east-1b",
              "Type": "database-subnets",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-dev-myvpc-db-us-east-1b",
              "Type": "database-subnets",
              "environment": "dev",
              "owners": "HR"
            },
            "vpc_id": "vpc-09e5cafd5d476768c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433554690891:subnet/subnet-0c9e8dd6b5ace5920",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0c9e8dd6b5ace5920",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "433554690891",
            "tags": {
              "Name": "HR-dev-myvpc-private-us-east-1a",
              "Type": "private-subnets",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-dev-myvpc-private-us-east-1a",
              "Type": "private-subnets",
              "environment": "dev",
              "owners": "HR"
            },
            "vpc_id": "vpc-09e5cafd5d476768c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433554690891:subnet/subnet-09fe70ea603602226",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-09fe70ea603602226",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "433554690891",
            "tags": {
              "Name": "HR-dev-myvpc-private-us-east-1b",
              "Type": "private-subnets",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-dev-myvpc-private-us-east-1b",
              "Type": "private-subnets",
              "environment": "dev",
              "owners": "HR"
            },
            "vpc_id": "vpc-09e5cafd5d476768c"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433554690891:subnet/subnet-0e8d30fdd723c3cd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e8d30fdd723c3cd5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "433554690891",
            "tags": {
              "Name": "HR-dev-myvpc-public-us-east-1a",
              "Type": "public-subnets",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-dev-myvpc-public-us-east-1a",
              "Type": "public-subnets",
              "environment": "dev",
              "owners": "HR"
            },
            "vpc_id": "vpc-09e5cafd5d476768c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433554690891:subnet/subnet-0233001a824826510",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0233001a824826510",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "433554690891",
            "tags": {
              "Name": "HR-dev-myvpc-public-us-east-1b",
              "Type": "public-subnets",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-dev-myvpc-public-us-east-1b",
              "Type": "public-subnets",
              "environment": "dev",
              "owners": "HR"
            },
            "vpc_id": "vpc-09e5cafd5d476768c"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433554690891:vpc/vpc-09e5cafd5d476768c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00003c05842943085",
            "default_route_table_id": "rtb-0ed8c5e1532a1a5da",
            "default_security_group_id": "sg-08e10217bff97e96c",
            "dhcp_options_id": "dopt-6776db1d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09e5cafd5d476768c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ed8c5e1532a1a5da",
            "owner_id": "433554690891",
            "tags": {
              "Name": "HR-dev-myvpc",
              "environment": "dev",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-dev-myvpc",
              "environment": "dev",
              "owners": "HR"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}